--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/node": "^22.2.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "eslint": "latest",
+    "eslint-config-next": "latest"
   }
 }
