--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^6.0.1",
     "@mui/material-nextjs": "latest",
     "next": "latest",
+    "package-lock-only": "^0.0.4",
     "react": "latest",
     "react-dom": "latest"
   },
